Add Basic Auth, fix table styling with empty cells
Firefox and IE don't draw cells without content - so some borders go
missing. Fixed that with some high tech nbsp's.

Adding optional Basic Auth: if you are upgrading you need to add the
basic_username and basic_password methods to your config.rb - let them
return nil if you don't want any auth.

--- a/config/config.rb.example
+++ b/config/config.rb.example
@@ -4,6 +4,14 @@ class MyConfig
       raise 'return a random string here'
     end
 
+    def basic_username
+      # change this and basic_password to something if you want Basic Auth
+    end
+
+    def basic_password
+      # change this to something if you want Basic Auth
+    end
+
     def db_log
       'log/datamapper.log'
     end
